<resources>
    <string name="app_name">The NYTimes Search</string>
    <string name="action_settings">Settings</string>
    <string name="hint">Enter search query</string>
    <string name="search">Search</string>
    <string name="title_activity_article">Article</string>
    <string name="begin_date">Begin Date</string>
    <string name="sort_order">Sort Order</string>
    <string name="news_desk_values">News Desk Values</string>
    <string name="arts">Arts</string>
    <string name="fashion_amp_style"><![CDATA[Fashion & Style]]></string>
    <string name="sports">Sports</string>
    <string name="save">Save</string>
    <string name="date_hint">MM/DD/YYYY</string>
    <string name="snackbar_no_results">No results found</string>
    <string name="snackbar_no_more_results">There are no more results for this query</string>
    <string name="snackbar_no_api_response">There was an error fetching your articles</string>
    <string name="news_desk">News Desk:</string>
    <string name="filters">Filters</string>
    <string name="share">Share</string>
    <string name="published_on">Published on:</string>
</resources>
